Fix: further improved contrast to light mode

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -9,7 +9,7 @@
   -webkit-text-fill-color: transparent;
 }
 [data-theme="light"] .text-gradient {
-  background: linear-gradient(to bottom, #fbbf24, #f2f2f2);
+  background: linear-gradient(to bottom, #fbbf24, #f3f3f3);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
